--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
     "react-tabs": "^3.0.0",
+    "redux": "^4.0.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
